# byte_for_buck

./: csv_to_json.py  data_scrapper.py  html_to_csv.py  index.html  pyproject.toml  scrap_a_page.py
data/: data_processed.json  data_v1.csv  data_v1.json  raw.csv  raw.html  scrapped.csv
